# math-exercises

./: README.md  tsconfig.json
bash/src/: getRandomNumber.sh
cpp/: .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json
cpp/src/cli/: factorNumber.cpp  findClosestRoot.cpp  terminalAnimation.cpp
cpp/src/questions/: makeFactorNumberQuestion.cpp  makeFactorNumberQuestion.h
cpp/src/util/: draw.cpp  draw.hpp  getRandomInt.cpp  getRandomInt.h  joinStringVector.cpp  joinStringVector.hpp  listenShutdownSignal.cpp  listenShutdownSignal.hpp  termEscape.hpp
src/: factorNumberQuestion.ts  getRandomInt.ts  makeFactorNumberQuestion.ts
src/cli/: factorNumber.ts
src/questions/: makeFactorNumberQuestion.ts
src/util/: getRandomInt.ts
